--- a/.gitignore
+++ b/.gitignore
@@ -1,32 +1,49 @@
-# コンパイル済みクラスと出力
+# ----------------------------------------
+# コンパイル済みクラス・ビルド出力
+# ----------------------------------------
 /bin/
 /build/
 /out/
 /.gradle/
 
-# IDE（Eclipse, IntelliJ など）
+# ----------------------------------------
+# Java ビルド生成物
+# ----------------------------------------
+*.class
+*.war
+*.jar
+*.ear
+
+# ----------------------------------------
+# IDE 設定ファイル
+# ----------------------------------------
 .idea/
 *.iml
 *.ipr
 *.iws
-*.class
+.settings/
+.classpath
+.project
 
-# OS特有のファイル
+# ----------------------------------------
+# OS 特有ファイル
+# ----------------------------------------
 .DS_Store
 Thumbs.db
 
-# Gradleラッパー以外のキャッシュ
+# ----------------------------------------
+# Gradle Wrapper（必要なファイルは除外しない）
+!gradlew
+!gradlew.bat
 !gradle/wrapper/gradle-wrapper.jar
+!gradle/wrapper/gradle-wrapper.properties
 
-# 環境ファイル
+# ----------------------------------------
+# 設定ファイル・環境ファイル（機密）
 src/main/resources/config.properties
 *.local.properties
 .env
 
-# ログファイルなど
+# ----------------------------------------
+# ログファイル
 *.log
-
-# Javaビルド生成物
-*.war
-*.ear
-*.jar
